@@ -1,7 +1,9 @@
 2.1.5
-- Add options to disable desaturation on Trinket & Dispel CD.
+- Priest's Purify now displays a stack number on it if double dispel. At 0 stacks it gets desaturated. At 1 or more stacks it stays colored.
+- Add options to disable desaturation on Trinket & Dispel CD (Global -> Arena Frames -> Misc).
 - Re-enable manabar text and add settings to show/hide it and position settings etc. Disabled by default.
-- Tweak layouts a little: Removed font outline on spec name text for Retail layout. Add font outline to old Arena layout's health & mana text (as it used to be, this got unintentionally removed with new settings).
+- Tweak layouts a little: Removed font outline on spec name text for Retail layout. Add font outline to the old Arena & Xaryu layout's health & mana text (as it used to be, this got unintentionally removed with new font settings).
+- Fix racials not updating properly between shuffle rounds.
 
 2.1.4
 - New "Simple Castbar" setting for Modern Castbars. Removes text background and puts text inside of the castbar.
